# elidex

./: .coderabbit.yaml  .gitignore  .plan-z1b-consume-delta.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  mise.toml  rust_out
crates/api/elidex-api-canvas/: Cargo.toml
crates/api/elidex-api-canvas/src/: component.rs  lib.rs  offscreen.rs
crates/api/elidex-api-crypto/: Cargo.toml
crates/api/elidex-api-crypto/src/: aes.rs  aes_kw.rs  algorithm.rs  ec.rs  error.rs  hash.rs  hkdf.rs  hmac.rs  jwk.rs  key.rs  lib.rs  ops.rs  pbkdf2.rs  rng.rs  rsa.rs  tests.rs
crates/api/elidex-api-crypto/src/algorithm/: mod.rs  model.rs  names.rs  normalize.rs  registry.rs
crates/api/elidex-api-sw/: Cargo.toml
crates/api/elidex-api-sw/src/: handle.rs  lib.rs  manifest.rs  persistence.rs  registration.rs  router.rs  scope.rs  security.rs  sync.rs  types.rs  update.rs
crates/api/elidex-cache-api/: Cargo.toml
crates/api/elidex-cache-api/src/: entry.rs  error.rs  lib.rs  storage.rs  store.rs
crates/core/elidex-ecs/: Cargo.toml  README.md
crates/core/elidex-ecs/src/: components.rs  dom.rs  fragment_tree.rs  lib.rs
crates/core/elidex-render/: Cargo.toml  README.md
crates/core/elidex-render/src/: display_list.rs  font_cache.rs  lib.rs  vello_backend.rs  vello_tests.rs
crates/core/elidex-sandbox/: Cargo.toml
crates/core/elidex-sandbox/src/: lib.rs  linux.rs  macos.rs  noop.rs  windows.rs
crates/css/elidex-css-anim/: Cargo.toml
crates/css/elidex-css-anim/src/: apply.rs  detection.rs  engine.rs  engine_tests.rs  instance.rs  interpolate.rs  lib.rs  parse.rs  parse_tests.rs  resolve.rs  style.rs  timeline.rs  timing.rs
crates/elidex-a11y/: Cargo.toml
crates/elidex-a11y/src/: lib.rs  names.rs  tree.rs
crates/elidex-bidi/: Cargo.toml
crates/elidex-bidi/src/: lib.rs
crates/elidex-crawler/: Cargo.toml
crates/elidex-crawler/data/: sites-en.csv  sites-ja.csv
crates/elidex-crawler/src/: crawler.rs  main.rs  robots.rs  sites.rs
crates/elidex-css/: Cargo.toml
crates/elidex-css/src/: color.rs  declaration.rs  lib.rs  parser.rs  selector.rs  values.rs
crates/elidex-css/src/color/: mod.rs  tests.rs
crates/elidex-css/src/declaration/: box_model.rs  flex.rs  font.rs  grid.rs  misc.rs  tests.rs
crates/elidex-css/src/selector/: matching.rs  mod.rs  parse.rs  tests.rs  traverse.rs  types.rs
crates/elidex-dom-api/: Cargo.toml
crates/elidex-dom-api/src/: class_list.rs  computed_style.rs  document.rs  element.rs  lib.rs  registry.rs  style.rs  util.rs
crates/elidex-dom-compat/: Cargo.toml
crates/elidex-dom-compat/src/: legacy_dom.rs  legacy_ua.rs  lib.rs  presentational.rs  vendor_prefix.rs
crates/elidex-ecs/: Cargo.toml
crates/elidex-ecs/src/: components.rs  dom.rs  lib.rs
crates/elidex-ecs/src/dom/: tests.rs
crates/elidex-js/: Cargo.toml
crates/elidex-js/src/: atom.rs  bridge.rs  error.rs  fetch_handle.rs  lib.rs  runtime.rs  script_extract.rs  span.rs  timer_queue.rs  value_conv.rs
crates/elidex-js/src/globals/: console.rs  document.rs  element.rs  events.rs  fetch.rs  history.rs  location.rs  mod.rs  timers.rs  window.rs
crates/elidex-js/src/lexer/: ident.rs  literal.rs  mod.rs  regexp_lit.rs  tests.rs
crates/elidex-js/src/parser/: arrow.rs  control_flow.rs  expr.rs  expr_tests.rs  function.rs  mod.rs  module.rs  object.rs  pattern.rs  primary.rs  stmt.rs  stmt_tests.rs
crates/elidex-js/src/regexp/: class_set.rs  escape.rs  mod.rs  tests.rs  unicode_property.rs
crates/elidex-js/src/runtime/: tests.rs
crates/elidex-js/src/scope/: mod.rs  tests.rs  visitor.rs
crates/elidex-layout/: Cargo.toml  README.md
crates/elidex-layout-block/: Cargo.toml
crates/elidex-layout-block/src/: block.rs  inline.rs  lib.rs
crates/elidex-layout-block/src/block/: children.rs  mod.rs  replaced.rs  tests.rs
crates/elidex-layout-flex/: Cargo.toml
crates/elidex-layout-flex/src/: algo.rs  lib.rs  tests.rs
crates/elidex-layout-flex/src/tests/: alignment_gap.rs  direction.rs  grow_shrink.rs  mod.rs
crates/elidex-layout-grid/: Cargo.toml
crates/elidex-layout-grid/src/: lib.rs  placement.rs  tests.rs  track.rs
crates/elidex-layout-grid/src/tests/: alignment_box.rs  mod.rs  placement.rs  track_sizing.rs
crates/elidex-layout/src/: block.rs  flex.rs  hit_test.rs  inline.rs  layout.rs  lib.rs
crates/elidex-layout/src/flex/: algo.rs  tests.rs
crates/elidex-parser/: Cargo.toml  README.md
crates/elidex-parser/src/: charset.rs  convert.rs  lib.rs
crates/elidex-plugin/: Cargo.toml
crates/elidex-plugin-macros/: Cargo.toml
crates/elidex-plugin/src/: computed_style.rs  context.rs  error.rs  event_types.rs  layout_types.rs  lib.rs  logical.rs  registry.rs  spec_level.rs  traits.rs  url_security.rs  values.rs
crates/elidex-plugin/src/computed_style/: display.rs  mod.rs  table.rs  tests.rs  text.rs
crates/elidex-plugin/src/handlers/: css.rs  html.rs  layout.rs
crates/elidex-render/: Cargo.toml
crates/elidex-render/src/: builder.rs  display_list.rs  font_cache.rs  lib.rs  vello_backend.rs
crates/elidex-render/src/builder/: glyph.rs  inline.rs  mod.rs  tests.rs  walk.rs  whitespace.rs
crates/elidex-script-session/: Cargo.toml
crates/elidex-script-session/src/: cssom_api.rs  dom_api.rs  engine.rs  event_dispatch.rs  event_listener.rs  identity_map.rs  lib.rs  mutation.rs  session.rs  types.rs
crates/elidex-script-session/src/event_dispatch/: mod.rs  tests.rs
crates/elidex-shaping/: Cargo.toml
crates/elidex-shaping/src/: database.rs  shaping.rs
crates/elidex-shell/: Cargo.toml  README.md
crates/elidex-shell/examples/: hello.rs
crates/elidex-shell/src/: app.rs  chrome.rs  content.rs  gpu.rs  ipc.rs  key_map.rs  lib.rs  pipeline.rs  tests.rs
crates/elidex-shell/src/app/: events.rs  hover.rs  mod.rs  navigation.rs  render.rs  tab.rs
crates/elidex-text/: Cargo.toml
crates/elidex-text/src/: database.rs  lib.rs  linebreak.rs  measurement.rs  shaping.rs
crates/elidex-wpt/: Cargo.toml
crates/elidex-wpt/src/: format.rs
crates/elidex-wpt/src/suites/: cascade.rs  mod.rs
(+1858 files in other folders)
