[workspace]
resolver = "2"
members = [
    "crates/core/elidex-plugin",
    "crates/core/elidex-plugin-macros",
    "crates/core/elidex-ecs",
    "crates/core/elidex-render",
    "crates/core/elidex-sandbox",
    "crates/css/elidex-css",
    "crates/css/elidex-css-box",
    "crates/css/elidex-css-text",
    "crates/css/elidex-css-flex",
    "crates/css/elidex-css-grid",
    "crates/css/elidex-css-table",
    "crates/css/elidex-css-multicol",
    "crates/css/elidex-css-float",
    "crates/css/elidex-css-anim",
    "crates/css/elidex-css-background",
    "crates/css/elidex-css-transform",
    "crates/css/elidex-style",
    "crates/dom/elidex-html-parser",
    "crates/dom/elidex-dom-api",
    "crates/dom/elidex-dom-compat",
    "crates/dom/elidex-a11y",
    "crates/dom/elidex-form",
    "crates/api/elidex-api-observers",
    "crates/api/elidex-cache-api",
    "crates/api/elidex-api-sw",
    "crates/dom/elidex-custom-elements",
    "crates/dom/elidex-indexeddb",
    "crates/layout/elidex-layout",
    "crates/layout/elidex-layout-block",
    "crates/layout/elidex-layout-flex",
    "crates/layout/elidex-layout-grid",
    "crates/layout/elidex-layout-table",
    "crates/layout/elidex-layout-multicol",
    "crates/text/elidex-shaping",
    "crates/text/elidex-linebreak",
    "crates/text/elidex-bidi",
    "crates/text/elidex-text",
    "crates/net/elidex-net",
    "crates/script/elidex-script-session",
    "crates/script/elidex-js",
    "crates/script/elidex-js-boa",
    "crates/script/elidex-wasm-runtime",
    "crates/api/elidex-api-workers",
    "crates/web/elidex-web-canvas",
    "crates/shell/elidex-shell",
    "crates/shell/elidex-navigation",
    "crates/storage/elidex-storage-core",
    "crates/tools/elidex-crawler",
    "crates/tools/elidex-wpt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/send-sh/elidex"
authors = ["send.sh"]
publish = false

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bitflags = "2"
arboard = "3"
cssparser = "0.36"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
csv = "1"
hecs = "0.11"
html5ever = "0.38"
markup5ever_rcdom = "0.38"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "brotli", "rustls-no-provider", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
fontdb = "0.23"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rustybuzz = "0.20"
bytes = "1"
cookie = "0.18"
crossbeam-channel = "0.5"
psl = "2"
http = "1"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url = "2"
webpki-roots = "1"
elidex-plugin = { path = "crates/core/elidex-plugin" }
elidex-ecs = { path = "crates/core/elidex-ecs" }
elidex-render = { path = "crates/core/elidex-render" }
elidex-sandbox = { path = "crates/core/elidex-sandbox" }
elidex-html-parser = { path = "crates/dom/elidex-html-parser" }
elidex-css = { path = "crates/css/elidex-css" }
elidex-css-box = { path = "crates/css/elidex-css-box" }
elidex-css-text = { path = "crates/css/elidex-css-text" }
elidex-css-flex = { path = "crates/css/elidex-css-flex" }
elidex-css-grid = { path = "crates/css/elidex-css-grid" }
elidex-css-multicol = { path = "crates/css/elidex-css-multicol" }
elidex-css-table = { path = "crates/css/elidex-css-table" }
elidex-css-float = { path = "crates/css/elidex-css-float" }
elidex-css-anim = { path = "crates/css/elidex-css-anim" }
elidex-css-background = { path = "crates/css/elidex-css-background" }
elidex-css-transform = { path = "crates/css/elidex-css-transform" }
elidex-style = { path = "crates/css/elidex-style" }
elidex-navigation = { path = "crates/shell/elidex-navigation" }
elidex-net = { path = "crates/net/elidex-net" }
elidex-layout = { path = "crates/layout/elidex-layout" }
elidex-layout-block = { path = "crates/layout/elidex-layout-block" }
elidex-layout-flex = { path = "crates/layout/elidex-layout-flex" }
elidex-layout-grid = { path = "crates/layout/elidex-layout-grid" }
elidex-layout-table = { path = "crates/layout/elidex-layout-table" }
elidex-layout-multicol = { path = "crates/layout/elidex-layout-multicol" }
elidex-bidi = { path = "crates/text/elidex-bidi" }
elidex-text = { path = "crates/text/elidex-text" }
elidex-script-session = { path = "crates/script/elidex-script-session" }
elidex-js = { path = "crates/script/elidex-js" }
elidex-js-boa = { path = "crates/script/elidex-js-boa" }
elidex-wasm-runtime = { path = "crates/script/elidex-wasm-runtime" }
elidex-api-workers = { path = "crates/api/elidex-api-workers" }
elidex-web-canvas = { path = "crates/web/elidex-web-canvas" }
elidex-dom-api = { path = "crates/dom/elidex-dom-api" }
elidex-dom-compat = { path = "crates/dom/elidex-dom-compat" }
elidex-shell = { path = "crates/shell/elidex-shell" }
elidex-a11y = { path = "crates/dom/elidex-a11y" }
elidex-form = { path = "crates/dom/elidex-form" }
elidex-api-observers = { path = "crates/api/elidex-api-observers" }
elidex-storage-core = { path = "crates/storage/elidex-storage-core" }
elidex-cache-api = { path = "crates/api/elidex-cache-api" }
elidex-api-sw = { path = "crates/api/elidex-api-sw" }
elidex-custom-elements = { path = "crates/dom/elidex-custom-elements" }
elidex-indexeddb = { path = "crates/dom/elidex-indexeddb" }
rusqlite = { version = "0.32", features = ["bundled"] }
boa_engine = { version = "0.21", features = ["annex-b"] }
boa_gc = "0.21"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
vello = "0.7"
wgpu = "27"
winit = "0.30"
pollster = "0.4"
tiny-skia = "0.12"
accesskit = "0.24"
accesskit_winit = "0.32"
wasmtime = "42"
wat = "1"
rayon = "1"
unicode-segmentation = "1"
unicode-linebreak = "0.1"
regex = "1"
criterion = { version = "0.8", default-features = false }
elidex-wpt = { path = "crates/tools/elidex-wpt" }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow assert_eq! on f32 in tests (exact values from deterministic computations)
float_cmp = "allow"
# Allow common patterns
module_name_repetitions = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
