[workspace]
resolver = "2"
members = [
    "crates/core/elidex-plugin",
    "crates/core/elidex-plugin-macros",
    "crates/core/elidex-ecs",
    "crates/core/elidex-render",
    "crates/core/elidex-sandbox",
    "crates/css/elidex-css",
    "crates/css/elidex-css-box",
    "crates/css/elidex-css-text",
    "crates/css/elidex-css-flex",
    "crates/css/elidex-css-grid",
    "crates/css/elidex-css-table",
    "crates/css/elidex-css-multicol",
    "crates/css/elidex-css-float",
    "crates/css/elidex-css-anim",
    "crates/css/elidex-css-background",
    "crates/css/elidex-css-transform",
    "crates/css/elidex-style",
    "crates/dom/elidex-html-parser",
    "crates/dom/elidex-html-parser-strict",
    "crates/dom/elidex-dom-api",
    "crates/dom/elidex-dom-compat",
    "crates/dom/elidex-a11y",
    "crates/dom/elidex-form",
    "crates/dom/elidex-form-core",
    "crates/api/elidex-api-observers",
    "crates/api/elidex-cache-api",
    "crates/api/elidex-api-crypto",
    "crates/api/elidex-api-sw",
    "crates/api/elidex-api-fetch",
    "crates/api/elidex-api-ws",
    "crates/api/elidex-api-canvas",
    "crates/dom/elidex-custom-elements",
    "crates/dom/elidex-indexeddb",
    "crates/layout/elidex-layout",
    "crates/layout/elidex-layout-block",
    "crates/layout/elidex-layout-flex",
    "crates/layout/elidex-layout-grid",
    "crates/layout/elidex-layout-table",
    "crates/layout/elidex-layout-multicol",
    "crates/text/elidex-shaping",
    "crates/text/elidex-linebreak",
    "crates/text/elidex-bidi",
    "crates/text/elidex-text",
    "crates/net/elidex-net",
    "crates/script/elidex-script-session",
    "crates/script/elidex-js",
    "crates/script/elidex-wasm-runtime",
    "crates/api/elidex-api-workers",
    "crates/web/elidex-web-canvas",
    "crates/shell/elidex-shell",
    "crates/shell/elidex-navigation",
    "crates/storage/elidex-storage-core",
    "crates/tools/elidex-crawler",
    "crates/tools/elidex-wpt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/send-sh/elidex"
authors = ["send.sh"]
publish = false

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
bitflags = "2"
arboard = "3"
cssparser = "0.37"
encoding_rs = "0.8"
clap = { version = "4", features = ["derive"] }
csv = "1"
hecs = "0.11"
html5ever = "0.39"
markup5ever_rcdom = "0.39"
# `rustls` (not `rustls-no-provider`): selects reqwest's bundled aws-lc-rs CryptoProvider so the
# crawler's TLS rides the same single crypto C lib as elidex-net + WebCrypto (rationale + the
# provider-resolution guard: `elidex-crawler` `crawler::tests::reqwest_client_resolves_crypto_provider`).
# This feature weakly references `quinn?/rustls-aws-lc-rs`, so Cargo records
# quinn/quinn-proto/quinn-udp/lru-slab in Cargo.lock — they are NEVER compiled (quinn builds only
# under reqwest's unused `http3` feature; `cargo tree -i quinn` is empty).
reqwest = { version = "0.13", default-features = false, features = ["gzip", "brotli", "rustls", "http2", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "net", "io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syn = { version = "3", features = ["full"] }
quote = "1"
proc-macro2 = "1"
phf = "0.14"
phf_codegen = "0.14"
fontdb = "0.23"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rustybuzz = "0.20"
bytes = "1"
cookie = "0.18"
crossbeam-channel = "0.5"
psl = "2"
http = "1"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rustls-pki-types = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "aws_lc_rs"] }
tokio-tungstenite = { version = "0.30", features = ["rustls-tls-webpki-roots"] }
url = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
sha1 = "0.11"
sha2 = "0.11"
hmac = "0.13"
hkdf = "0.13"
pbkdf2 = { version = "0.13", default-features = false, features = ["hmac"] }
aes = "0.9"
aes-kw = "0.3"
cbc = "0.2"
ghash = "0.6"
subtle = "2"
getrandom = "0.4"
# Elliptic-curve stack for WebCrypto ECDSA / ECDH (PR-4).  The stable 0.13 EC
# line (digest 0.10 / rand_core 0.6 generation); ECDSA is driven via
# `sign_prehash` / `verify_prehash` so our `sha2 0.11` digest stays decoupled
# from ecdsa's digest generation.  `pkcs8` enables both PKCS#8 (private) and
# SPKI (public) DER; `arithmetic` is required for ECDH scalar multiplication.
elliptic-curve = { version = "0.13", features = ["arithmetic", "sec1", "ecdh", "pkcs8"] }
ecdsa = "0.16"
p256 = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8", "arithmetic"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8", "arithmetic"] }
p521 = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8", "arithmetic"] }
# RSA stack for WebCrypto RSASSA-PKCS1-v1_5 / RSA-PSS (PR-5a).  The stable
# 0.9 line (digest 0.10 / rand_core 0.6 generation — already in the tree via
# the EC 0.13 stack; num-bigint-dig is the new transitive).  `std` only (no
# `pem`: WebCrypto is DER-only); keygen RNG is passed explicitly (no
# `getrandom`).  Signing uses the prehash `RsaPrivateKey::sign` /
# `RsaPublicKey::verify`, so the message digest stays on hash.rs (sha2 0.11);
# the digest *types* below supply only the `AssociatedOid` markers for the
# PKCS#1 v1.5 DigestInfo prefix + the PSS MGF1 hash.
rsa = { version = "0.9", default-features = false, features = ["std"] }
# sha1 / sha2 0.10 (the rsa 0.9 digest generation) — `oid` for the
# `AssociatedOid` marker types only; aliased so they coexist with the 0.11
# sha1 / sha2 hash.rs uses for the actual digest computation.
sha1-oid = { package = "sha1", version = "0.10", features = ["oid"] }
sha2-oid = { package = "sha2", version = "0.10", features = ["oid"] }
# rand_core 0.6 (the EC 0.13 / rsa 0.9 generation) — direct dep for the shared
# `ClosureRng` entropy-seam adapter feeding both EC `SecretKey::random` and RSA
# `RsaPrivateKey::new_with_exp` from the VM's single `fill_random` closure.
rand_core = "0.6"
# aws-lc-rs (AWS-LC, a BoringSSL fork) — the workspace's **single crypto C library**, shared by
# the rustls TLS stack (the `CryptoProvider` for elidex-net + reqwest + tungstenite; replaces the
# former `ring` provider) AND WebCrypto §22 RSA-OAEP encrypt / decrypt / wrapKey / unwrapKey (PR-5b).
# RSA-OAEP runs here because the pure-Rust `rsa` crate carries RUSTSEC-2023-0071 (Marvin) on its
# private-key ops AND models the OAEP `label` as a UTF-8 `String` (so it cannot represent WebCrypto's
# arbitrary `BufferSource` label) — aws-lc-rs gives both constant-time decryption and a byte-slice
# label (`Option<&[u8]>`), so the whole RSA-OAEP op-set runs here while the signing / key-management
# families stay on `rsa` 0.9.  The non-FIPS backend (`aws-lc-sys`, built via cmake/cc) is
# constant-time; no `fips` feature.  License Apache-2.0/ISC.
aws-lc-rs = "1.13"
webpki-roots = "1"
elidex-plugin = { path = "crates/core/elidex-plugin" }
elidex-ecs = { path = "crates/core/elidex-ecs" }
elidex-render = { path = "crates/core/elidex-render" }
elidex-sandbox = { path = "crates/core/elidex-sandbox" }
elidex-html-parser = { path = "crates/dom/elidex-html-parser" }
elidex-html-parser-strict = { path = "crates/dom/elidex-html-parser-strict" }
elidex-css = { path = "crates/css/elidex-css" }
elidex-css-box = { path = "crates/css/elidex-css-box" }
elidex-css-text = { path = "crates/css/elidex-css-text" }
elidex-css-flex = { path = "crates/css/elidex-css-flex" }
elidex-css-grid = { path = "crates/css/elidex-css-grid" }
elidex-css-multicol = { path = "crates/css/elidex-css-multicol" }
elidex-css-table = { path = "crates/css/elidex-css-table" }
elidex-css-float = { path = "crates/css/elidex-css-float" }
elidex-css-anim = { path = "crates/css/elidex-css-anim" }
elidex-css-background = { path = "crates/css/elidex-css-background" }
elidex-css-transform = { path = "crates/css/elidex-css-transform" }
elidex-style = { path = "crates/css/elidex-style" }
elidex-navigation = { path = "crates/shell/elidex-navigation" }
elidex-net = { path = "crates/net/elidex-net" }
elidex-layout = { path = "crates/layout/elidex-layout" }
elidex-layout-block = { path = "crates/layout/elidex-layout-block" }
elidex-layout-flex = { path = "crates/layout/elidex-layout-flex" }
elidex-layout-grid = { path = "crates/layout/elidex-layout-grid" }
elidex-layout-table = { path = "crates/layout/elidex-layout-table" }
elidex-layout-multicol = { path = "crates/layout/elidex-layout-multicol" }
elidex-bidi = { path = "crates/text/elidex-bidi" }
elidex-text = { path = "crates/text/elidex-text" }
elidex-script-session = { path = "crates/script/elidex-script-session" }
elidex-js = { path = "crates/script/elidex-js" }
elidex-wasm-runtime = { path = "crates/script/elidex-wasm-runtime" }
elidex-api-workers = { path = "crates/api/elidex-api-workers" }
elidex-web-canvas = { path = "crates/web/elidex-web-canvas" }
elidex-dom-api = { path = "crates/dom/elidex-dom-api" }
elidex-dom-compat = { path = "crates/dom/elidex-dom-compat" }
elidex-shell = { path = "crates/shell/elidex-shell" }
elidex-a11y = { path = "crates/dom/elidex-a11y" }
elidex-form = { path = "crates/dom/elidex-form" }
elidex-form-core = { path = "crates/dom/elidex-form-core" }
elidex-api-observers = { path = "crates/api/elidex-api-observers" }
elidex-storage-core = { path = "crates/storage/elidex-storage-core" }
elidex-cache-api = { path = "crates/api/elidex-cache-api" }
elidex-api-crypto = { path = "crates/api/elidex-api-crypto" }
elidex-api-sw = { path = "crates/api/elidex-api-sw" }
elidex-api-fetch = { path = "crates/api/elidex-api-fetch" }
elidex-api-ws = { path = "crates/api/elidex-api-ws" }
elidex-api-canvas = { path = "crates/api/elidex-api-canvas" }
elidex-custom-elements = { path = "crates/dom/elidex-custom-elements" }
elidex-indexeddb = { path = "crates/dom/elidex-indexeddb" }
rusqlite = { version = "0.40", features = ["bundled"] }
egui = "0.34"
egui-wgpu = "0.35"
egui-winit = "0.34"
vello = "0.9"
wgpu = "30"
winit = "0.30"
pollster = "1.0"
tiny-skia = "0.12"
accesskit = "0.24"
accesskit_winit = "0.33"
wasmtime = "46"
wat = "1"
static_assertions = "1"
rayon = "1"
unicode-segmentation = "1"
unicode-linebreak = "0.1"
regex = "1"
regress = { version = "0.11", features = ["utf16"] }
criterion = { version = "0.8", default-features = false }
elidex-wpt = { path = "crates/tools/elidex-wpt" }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow assert_eq! on f32 in tests (exact values from deterministic computations)
float_cmp = "allow"
# Allow common patterns
module_name_repetitions = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
