[package]
name = "elidex-a11y"
description = "Accessibility tree builder (ECS DOM → AccessKit) for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "accessibility", "a11y"]
categories = ["web-programming"]

[dependencies]
elidex-ecs.workspace = true
elidex-plugin.workspace = true
accesskit.workspace = true

[lints]
workspace = true
