[package]
name = "elidex-bidi"
description = "Bidirectional text analysis and reordering for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
readme = "README.md"
keywords = ["browser-engine", "text", "bidi"]
categories = ["web-programming"]

[dependencies]
unicode-bidi = "0.3"

[lints]
workspace = true
