[package]
name = "elidex-crawler"
description = "Web compatibility survey tool for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
readme = "README.md"
keywords = ["browser-engine", "web-compatibility", "crawler"]
categories = ["web-programming"]

[dependencies]
anyhow.workspace = true
elidex-plugin.workspace = true
clap.workspace = true
csv.workspace = true
html5ever.workspace = true
markup5ever_rcdom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
