[package]
name = "elidex-dom-api"
description = "DOM API handler implementations for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "dom", "api"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-ecs.workspace = true
elidex-script-session.workspace = true
elidex-css.workspace = true
elidex-style.workspace = true

[lints]
workspace = true
