[package]
name = "elidex-dom-compat"
description = "HTML/CSS compatibility layer for elidex (legacy tags, presentational hints, vendor prefixes)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "compat", "html"]
categories = ["web-programming"]

[dependencies]
elidex-css.workspace = true
elidex-ecs.workspace = true
elidex-plugin.workspace = true

[lints]
workspace = true
