[package]
name = "elidex-ecs"
description = "ECS-based DOM storage for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "ecs", "dom"]
categories = ["web-programming"]

[dependencies]
hecs.workspace = true

[lints]
workspace = true
