[package]
name = "elidex-js"
description = "JavaScript engine integration (boa) and DOM bindings for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "javascript", "dom"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-ecs.workspace = true
elidex-script-session.workspace = true
elidex-dom-api.workspace = true
elidex-css.workspace = true
elidex-net.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
url.workspace = true
bytes.workspace = true

[lints]
workspace = true
