[package]
name = "elidex-js"
description = "JavaScript parser (ES2020+ strict mode, pure Rust)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "javascript", "parser"]
categories = ["web-programming", "parsing"]

[dependencies]
hashbrown = "0.15"
unicode-ident = "1.0"

[lints]
workspace = true
