[package]
name = "elidex-layout-block"
description = "Block and inline layout algorithms, shared helpers, and ChildLayoutFn type for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "layout", "block"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-ecs.workspace = true
elidex-text.workspace = true

[lints]
workspace = true
