[package]
name = "elidex-layout-grid"
description = "CSS Grid layout algorithm for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "layout", "grid"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-ecs.workspace = true
elidex-text.workspace = true
elidex-layout-block = { path = "../elidex-layout-block" }

[lints]
workspace = true
