[package]
name = "elidex-layout"
description = "Layout algorithms (block, inline, flexbox) for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "layout", "flexbox"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-ecs.workspace = true
elidex-text.workspace = true

[lints]
workspace = true
