[package]
name = "elidex-parser"
description = "HTML/XML parser for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "html", "parser"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true

[lints]
workspace = true
