[package]
name = "elidex-render"
description = "Rendering backend abstraction for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "rendering", "graphics"]
categories = ["web-programming"]

[lints]
workspace = true
