[package]
name = "elidex-render"
description = "Rendering backend abstraction for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "rendering", "graphics"]
categories = ["web-programming"]

[dependencies]
elidex-plugin.workspace = true
elidex-text.workspace = true
elidex-ecs.workspace = true
elidex-layout-block.workspace = true
vello.workspace = true
wgpu.workspace = true

[lints]
workspace = true
