[package]
name = "elidex-script-session"
description = "Script session abstraction bridging JS engines and the ECS DOM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "script", "dom"]
categories = ["web-programming"]

[dependencies]
elidex-plugin = { workspace = true }
elidex-ecs = { workspace = true }
hecs = { workspace = true }

[lints]
workspace = true
