[package]
name = "elidex-shell"
description = "Window management and event loop shell for elidex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "window", "event-loop"]
categories = ["web-programming"]

[dependencies]
elidex-ecs.workspace = true
elidex-plugin.workspace = true
elidex-render.workspace = true
elidex-parser.workspace = true
elidex-css.workspace = true
elidex-dom-compat.workspace = true
elidex-style.workspace = true
elidex-layout.workspace = true
elidex-text.workspace = true
elidex-js.workspace = true
elidex-script-session.workspace = true
elidex-navigation.workspace = true
elidex-net.workspace = true
url.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true

[lints]
workspace = true
