[package]
name = "elidex-text"
description = "Text shaping, measurement, and line breaking for elidex (facade)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["browser-engine", "text", "shaping"]
categories = ["web-programming"]

[dependencies]
elidex-shaping = { path = "../elidex-shaping" }
elidex-linebreak = { path = "../elidex-linebreak" }
elidex-bidi = { path = "../elidex-bidi" }

[lints]
workspace = true
