[package]
name = "elidex-wpt"
description = "WPT-style test harness for elidex CSS conformance testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
rust-version.workspace = true
keywords = ["browser-engine", "testing", "wpt"]
categories = ["development-tools::testing"]

[dependencies]
elidex-parser.workspace = true
elidex-css.workspace = true
elidex-ecs.workspace = true
elidex-style.workspace = true
elidex-plugin.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
