[package]
name = "elidex-api-canvas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# Canvas 2D raster backend (`Canvas2dContext`) — stored as a per-canvas-entity
# ECS component; this crate inserts/queries it (engine-independent plumbing).
elidex-web-canvas.workspace = true
# `EcsDom` / `Entity` / `ImageData` component + `MutationEvent` /
# `MutationDispatcher` for the width/height bitmap-reset reconciler.
elidex-ecs.workspace = true

[dev-dependencies]
hecs = { workspace = true }

[lints]
workspace = true
