[package]
name = "elidex-api-crypto"
description = "Engine-independent WebCrypto algorithms for elidex (CryptoKey lifecycle, algorithm normalization, HMAC, digest, JWK)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish.workspace = true
keywords = ["browser-engine", "webcrypto", "hmac"]
categories = ["web-programming", "cryptography"]

[dependencies]
aes.workspace = true
aes-kw.workspace = true
base64.workspace = true
cbc = { workspace = true, features = ["alloc"] }
ghash.workspace = true
hkdf.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
subtle.workspace = true

[lints]
workspace = true
